--- a/src/components/layout/Sidebar/Sidebar.module.scss
+++ b/src/components/layout/Sidebar/Sidebar.module.scss
@@ -181,7 +181,6 @@
   align-items: center;
   justify-content: space-around;
   border-top: 1px solid rgba(255, 255, 255, 0.08);
-  padding-bottom: env(safe-area-inset-bottom, 0px);
 }
 
 .tabItem {
